--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,6 +22,14 @@
     border-width: 1px;
   }
 
+  .shadow-custom {
+    box-shadow: 0px 11px 0px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .poppins {
+    font-family: ;
+  }
+
   .max-width {
     max-width: 1109px;
   }
@@ -26,7 +37,7 @@
   .text-width {
     width: 482px;
   }
-  
+
   .size {
     background-size: 20px;
   }
@@ -34,7 +45,6 @@
   .positioning {
     background-position: 93% 50%;
   }
-
 }
 
 @layer components {
